tests/ui/panic-handler/panic-handler-bad-signature-3.stderr
error[E0308]: `#[panic_handler]` function has wrong type
  --> $DIR/panic-handler-bad-signature-3.rs:9:1
   |
LL | fn panic() -> ! {
   | ^^^^^^^^^^^^^^^ incorrect number of function parameters
   |
   = note: expected signature `for<'a, 'b> fn(&'a PanicInfo<'b>) -> _`
              found signature `fn() -> _`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
